fixed :zap: overflow of screen on mobile devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,7 @@ body {
 	font-family: "Courier New", Courier, monospace;
 	padding: 1.5rem 0.5rem;
 	font-size: 4rem;
+	overflow-x: auto; 
 }
 
 .calc__button,
@@ -88,7 +89,7 @@ footer {
 	background: #000;  
 	padding: 2rem; 
 	font-size: 2.5rem;
-	text-transform: uppercase; 
+	text-transform: capitalize; 
 }
 
 footer p {
